# pyplaces

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  demo.py  pyproject.toml
.github/workflows/: build-test-publish.yml  build-test.yml  pypi-publish.yml  python-package.yml
docs/: .readthedocs.yaml
docs/source/: conf.py  examples.rst  index.rst  usage.rst
docs/source/notebooks/: example1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb
src/pyplaces/: PyPlaces.py  __about__.py  __init__.py  _category_finder.py  _conversion_utils.py  _errors.py  _foursquare_open_places.py  _geo_utils.py  _geocoder.py  _http.py  _io_utils.py  _nominatim.py  _overture_maps.py  _pyplaces_datasource.py  _utils.py  _version.py  foursquare_open_places.py  overture_maps.py  settings.py
src/pyplaces/releases/foursquare/: releases.txt
src/pyplaces/releases/overture/: base_types.txt  releases.txt
tests/: __init__.py  alt_test_pyplaces.py  test_pyplaces.py
